k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-management-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-management-api
  template:
    metadata:
      labels:
        app: order-management-api
    spec:
      terminationGracePeriodSeconds: 25 # > spring.lifecycle.timeout-per-shutdown-phase
      containers:
        - name: api
          image: ghcr.io/sushantac/order-management-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            failureThreshold: 30
            periodSeconds: 5
